Large refactoring to explicitly separate out entity types. Immediately, this facilitates much smaller packet sizes in prefab dense zones such as the aurora.  From a code standpoint, this offers separation of concerns and opens up opportunity to unify redundant systems such as items (which are essentially entities that also need persisted metadata).  This also removes the concept of storing serialized game objects (such as on drop) because they are a lazy way of not implementing the appropriate metadata payload.
Known regressions:
- Ping no longer updating (need to convert this to entity metadata system)
- Dropped items resetting state (such as a battery - again need to use entity metadata system)

--- a/NitroxClient/NitroxClient.csproj
+++ b/NitroxClient/NitroxClient.csproj
@@ -81,8 +81,9 @@
     <Compile Include="GameLogic\Simulation\HandInteraction.cs" />
     <Compile Include="GameLogic\Simulation\LockRequest.cs" />
     <Compile Include="GameLogic\Simulation\LockRequestContext.cs" />
-    <Compile Include="GameLogic\Spawning\EntitySpawnerResolver.cs" />
-    <Compile Include="GameLogic\Spawning\ExistingGameObjectSpawner.cs" />
+    <Compile Include="GameLogic\Spawning\EntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\IEntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntities\WorldEntitySpawnerResolver.cs" />
     <Compile Include="GameLogic\Spawning\Metadata\PrecursorDoorwayMetadataProcessor.cs" />
     <Compile Include="GameLogic\Spawning\Metadata\PrecursorKeyTerminalMetadataProcessor.cs" />
     <Compile Include="GameLogic\Spawning\Metadata\PrecursorTeleporterActivationTerminalMetadataProcessor.cs" />
@@ -115,10 +116,12 @@
     <Compile Include="GameLogic\InitialSync\PlayerInitialSyncProcessor.cs" />
     <Compile Include="GameLogic\InitialSync\EscapePodInitialSyncProcessor.cs" />
     <Compile Include="GameLogic\PlayerModel\Equipment\ScubaSuitVisibiliyHandler.cs" />
-    <Compile Include="GameLogic\Spawning\CellRootSpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntities\CellRootSpawner.cs" />
     <Compile Include="GameLogic\Spawning\Metadata\StarshipDoorMetadataProcessor.cs" />
     <Compile Include="GameLogic\Spawning\Metadata\IncubatorMetadataProcessor.cs" />
     <Compile Include="GameLogic\Spawning\Metadata\WeldableWallPanelGenericMetadataProcessor.cs" />
+    <Compile Include="GameLogic\Spawning\PrefabChildEntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntitySpawner.cs" />
     <Compile Include="GameLogic\StorageSlots.cs" />
     <Compile Include="Helpers\NitroxProtobufSerializer.cs" />
     <Compile Include="MonoBehaviours\Gui\Chat\PlayerChat.cs" />
@@ -304,11 +307,10 @@
     <Compile Include="GameLogic\RemotePlayerManagerExtensions.cs" />
     <Compile Include="GameLogic\SeamothModulesEvent.cs" />
     <Compile Include="GameLogic\SimulationOwnership.cs" />
-    <Compile Include="GameLogic\Spawning\SerializedEntitySpawner.cs" />
-    <Compile Include="GameLogic\Spawning\ReefbackEntitySpawner.cs" />
-    <Compile Include="GameLogic\Spawning\CrashEntitySpawner.cs" />
-    <Compile Include="GameLogic\Spawning\DefaultEntitySpawner.cs" />
-    <Compile Include="GameLogic\Spawning\IEntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntities\ReefbackWorldEntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntities\CrashEntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntities\DefaultWorldEntitySpawner.cs" />
+    <Compile Include="GameLogic\Spawning\WorldEntities\IWorldEntitySpawner.cs" />
     <Compile Include="GameLogic\PlayerModel\Equipment\StillSuitVisibilityHandler.cs" />
     <Compile Include="GameLogic\Terrain.cs" />
     <Compile Include="GameLogic\Vehicles.cs" />
